# TAAC_2026

./: .gitattributes  .gitignore  README.md  TESTING.md  TODO.md  pyproject.toml  zensical.toml
.agents/skills/vscode-devcontainer-cleanup/: SKILL.md
.github/workflows/: ci.yml  deploy-docs.yml  gpu-tests.yml  performance-benchmarks.yml
config/main/: README.md
docs/: EXPERIMENTS.md  dev.md  getting-started.md
docs/experiments/: unirec.md
docs/guide/: local-site.md  online-training-bundle.md
scripts/: run_gpu_tests.py
src/taac2026/: __init__.py  config.py  evaluate.py  experiment_loader.py  folder_experiment.py  metrics.py  runtime.py  train.py  types.py  utils.py
src/taac2026.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/taac2026/application/evaluation/: inference.py  service.py
src/taac2026/application/maintenance/: package_training.py
src/taac2026/application/maintenance/templates/: bundle_readme.md.tmpl  run.sh.tmpl
src/taac2026/application/training/: cli.py  profiling.py
src/taac2026/domain/: config.py
src/taac2026/infrastructure/nn/: triton_attention.py  triton_ffn.py  triton_norm.py
src/taac2026/reporting/: model_performance_plot.py
tests/: conftest.py  test_data_pipeline.py  test_evaluate_cli.py  test_experiment_packages.py  test_package_training.py  test_runtime_integration.py  test_test_collection.py  test_triton_kernels.py  training_stack_support.py
tools/: plot_model_performance_vs_size.py
