[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "taac2026"
version = "0.1.0"
description = "TAAC 2026 experiment workspace"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"matplotlib>=3.10",
	"numpy>=2.1",
	"pyarrow>=18.0",
	"pytest>=8.3",
	"torch>=2.6",
]

[tool.uv.sources]
torch = [
	{ index = "pytorch-cu128", marker = "platform_system == 'Linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[project.scripts]
taac-train = "taac2026.train:main"
taac-evaluate = "taac2026.evaluate:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
